# ku-ap-2024-final

./: README.md  apl.hs  exam.cabal  graph.final  runtests.hs
src/: KVDB.hs  KVDB_Tests.hs  SPC.hs
src/APL/: AST.hs  Eval.hs  InterpConcurrent.hs  InterpConcurrent_Tests.hs  InterpPure.hs  InterpPure_Tests.hs  InterpSim.hs  InterpSim_Tests.hs  Monad.hs  Parser.hs  Parser_Tests.hs
