cabal-version:      3.0
name:               exam
version:            1.0.0.0
build-type:         Simple

common common
    default-language: Haskell2010
    ghc-options: -Wall

library
    import: common
    hs-source-dirs: src
    build-depends:
        base
      , megaparsec
      , tasty
      , tasty-hunit
    exposed-modules:
        GenServer
        KVDB
        KVDB_Tests
        SPC
        APL.AST
        APL.Eval
        APL.Parser
        APL.Parser_Tests
        APL.InterpSim
        APL.InterpSim_Tests
        APL.InterpConcurrent
        APL.InterpConcurrent_Tests
        APL.InterpPure
        APL.InterpPure_Tests
        APL.Monad

test-suite exam-test
    import: common
    type: exitcode-stdio-1.0
    main-is: runtests.hs
    build-depends:
        base
      , tasty
      , exam
